# loupe

./: README.md  claude.md  package-lock.json  package.json
.github/workflows/: build.yml
figma-plugin/: code.js  manifest.json  ui.html
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: diff.js  property-utils.js  state.svelte.js
src/lib/components/: CompareTab.svelte  FigmaTab.svelte  InspectTab.svelte  ResultTab.svelte  TabNav.svelte  WebTab.svelte
src/routes/: +page.svelte
