[package]
name = "loupe"
version = "0.1.0"
description = "Compare web components against Figma frames"
authors = ["you"]
edition = "2021"

[lib]
name = "loupe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["net"] }
base64 = "0.22"
